--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = nova
 version = 12.0.0
-summary = Cloud computing fabric controller
+summary = Cloud computing fabric controller  #云计算控制器
 description-file =
     README.rst
 author = OpenStack
